--- a/dev_android_crie_18_apps/FirebaseApp/app/build.gradle
+++ b/dev_android_crie_18_apps/FirebaseApp/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.firebase:firebase-database:18.0.0'
     implementation 'com.google.firebase:firebase-auth:18.0.0'
+    implementation 'com.google.firebase:firebase-storage:18.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
