--- a/dev_android_crie_18_apps/Organizze/app/src/main/AndroidManifest.xml
+++ b/dev_android_crie_18_apps/Organizze/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.CadastroActivity"></activity>
-        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.activity.CadastroActivity"></activity>
+        <activity android:name=".activity.activity.LoginActivity" />
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activity.activity.MainActivity"
             android:theme="@style/Theme.Intro">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
