--- a/dev_android_crie_18_apps/Organizze/app/src/main/AndroidManifest.xml
+++ b/dev_android_crie_18_apps/Organizze/app/src/main/AndroidManifest.xml
@@ -12,7 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.activity.CadastroActivity"></activity>
+        <activity
+            android:name=".activity.activity.PrincipalActivity"
+            android:label="@string/title_activity_principal"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".activity.activity.CadastroActivity" />
         <activity android:name=".activity.activity.LoginActivity" />
         <activity
             android:name=".activity.activity.MainActivity"
