--- a/dev_android_crie_18_apps/Organizze/app/build.gradle
+++ b/dev_android_crie_18_apps/Organizze/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:18.0.0'
     implementation 'com.heinrichreimersoftware:material-intro:2.0.0'
     implementation 'com.google.android.material:material:1.1.0'
+    compile 'com.github.clans:fab:1.6.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
