--- a/dev_android_crie_18_apps/Organizze/app/src/main/AndroidManifest.xml
+++ b/dev_android_crie_18_apps/Organizze/app/src/main/AndroidManifest.xml
@@ -12,10 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity.activity.DespesasActivity"
+                  android:theme="@style/DespesasTheme"/>
+        <activity android:name=".activity.activity.ReceitasActivity"
+                  android:theme="@style/ReceitasTheme"/>
         <activity
             android:name=".activity.activity.PrincipalActivity"
             android:label="@string/title_activity_principal"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activity.activity.CadastroActivity" />
         <activity android:name=".activity.activity.LoginActivity" />
         <activity
