--- a/dev_android_crie_18_apps/Organizze/app/build.gradle
+++ b/dev_android_crie_18_apps/Organizze/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.heinrichreimersoftware:material-intro:2.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.prolificinteractive:material-calendarview:1.4.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
