--- a/dev_android_crie_18_apps/WhatsApp/app/build.gradle
+++ b/dev_android_crie_18_apps/WhatsApp/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:18.0.0'
     implementation 'com.google.firebase:firebase-database:18.0.0'
     implementation 'com.google.firebase:firebase-storage:18.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
 }
