Interface de configurações & imagem arredondada - Parte 02

--- a/dev_android_crie_18_apps/WhatsApp/app/build.gradle
+++ b/dev_android_crie_18_apps/WhatsApp/app/build.gradle
@@ -26,6 +26,8 @@ android {
 
 dependencies {
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     implementation 'com.ogaclejapan.smarttablayout:library:1.7.0@aar'
 
     //Optional: see how to use the utility.
