Permissões no Android Marshmallow - Parte 02

--- a/dev_android_crie_18_apps/WhatsApp/app/src/main/AndroidManifest.xml
+++ b/dev_android_crie_18_apps/WhatsApp/app/src/main/AndroidManifest.xml
@@ -3,8 +3,9 @@
     package="com.example.whatsapp">
 
     <uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-    />
+        android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
