Recuperando foto e nome de usuário

--- a/dev_android_crie_18_apps/WhatsApp/app/build.gradle
+++ b/dev_android_crie_18_apps/WhatsApp/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:18.0.0'
     implementation 'com.google.firebase:firebase-storage:18.0.0'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
 }
