--- a/curso_dev_kotlin/Motivation/app/src/main/AndroidManifest.xml
+++ b/curso_dev_kotlin/Motivation/app/src/main/AndroidManifest.xml
@@ -14,14 +14,20 @@
         android:theme="@style/Theme.Motivation"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".UserActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
